lib/cwren.pas

unit cwren;

interface

{
  Automatically converted by H2Pas 1.0.0 from wren.h
  The following command line parameters were used:
    -d
    -e
    -o
    cwren.pas
    wren.h
}

Type
  Pchar  = ^char;
  Plongint  = ^longint;
  PWrenHandle  = Pointer;
  PWrenVM  = Pointer;
{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}
  { The Wren semantic version number components. }

const
    WREN_VERSION_MAJOR = 0;    
    WREN_VERSION_MINOR = 4;    
    WREN_VERSION_PATCH = 0;    
  { A human-friendly string representation of the version. }
    WREN_VERSION_STRING = '0.4.0';



  cDllName = {$IFDEF WINDOWS}

                     {$IFDEF DEBUG}
                             {$IFDEF WIN64} 'libwren.dll' {$ELSE} 'libwren32-debug.dll' {$ENDIF}
                     {$ELSE}
                            {$IFDEF WIN64} 'libwren.dll' {$ELSE} 'libwren32.dll' {$ENDIF}
                     {$ENDIF}
             {$IFEND}
             {$IFDEF DARWIN} 'libwren.dylib' {$IFEND}
             {$IFDEF LINUX} 'libwren.so' {$IFEND};
    
  { A monotonically increasing numeric representation of the version number. Use }
  { this if you want to do range checks over versions. }
  {#define WREN_VERSION_NUMBER (WREN_VERSION_MAJOR * 1000000 +                    \ }
  {                             WREN_VERSION_MINOR * 1000 +                       \ }
  {                             WREN_VERSION_PATCH) }
  {#define WREN_VERSION_NUMBER 0004000 }
  {#ifndef WREN_API }
  {  #if defined(_MSC_VER) && defined(WREN_API_DLLEXPORT) }
  {    #define WREN_API __declspec( dllexport ) }
  {  #else }
  {    #define WREN_API }
  {  #endif }
  {#endif //WREN_API }
  { A single virtual machine for executing Wren code. }
  { }
  { Wren has no global state, so all state stored by a running interpreter lives }
  { here. }

  type
  { A handle to a Wren object. }
  { }
  { This lets code outside of the VM hold a persistent reference to an object. }
  { After a handle is acquired, and until it is released, this ensures the }
  { garbage collector will not reclaim the object it references. }
  { A generic allocation function that handles all explicit memory management }
  { used by Wren. It's used like so: }
  { }
  { - To allocate new memory, [memory] is NULL and [newSize] is the desired }
  {   size. It should return the allocated memory or NULL on failure. }
  { }
  { - To attempt to grow an existing allocation, [memory] is the memory, and }
  {   [newSize] is the desired size. It should return [memory] if it was able to }
  {   grow it in place, or a new pointer if it had to move it. }
  { }
  { - To shrink memory, [memory] and [newSize] are the same as above but it will }
  {   always return [memory]. }
  { }
  { - To free memory, [memory] will be the memory to free and [newSize] will be }
  {   zero. It should return NULL. }

    WrenReallocateFn = function (memory:pointer; newSize:size_t; userData:pointer):pointer;cdecl;
  { A function callable from Wren code, but implemented in C. }

    WrenForeignMethodFn = procedure (vm:PWrenVM);cdecl;
  { A finalizer function for freeing resources owned by an instance of a foreign }
  { class. Unlike most foreign methods, finalizers do not have access to the VM }
  { and should not interact with it since it's in the middle of a garbage }
  { collection. }

    WrenFinalizerFn = procedure (data:pointer);cdecl;
  { Gives the host a chance to canonicalize the imported module name, }
  { potentially taking into account the (previously resolved) name of the module }
  { that contains the import. Typically, this is used to implement relative }
  { imports. }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)

    WrenResolveModuleFn = function (vm:PWrenVM; importer:Pchar; name:Pchar):Pchar;cdecl;
  { Forward declare }
    PWrenLoadModuleResult = ^WrenLoadModuleResult;

  { Called after loadModuleFn is called for module [name]. The original returned result }
  { is handed back to you in this callback, so that you can free memory if appropriate. }
(* Const before type ignored *)

    WrenLoadModuleCompleteFn = procedure (vm:PWrenVM; name:Pchar; result:PWrenLoadModuleResult); cdecl;
  { The result of a loadModuleFn call.  }
  { [source] is the source code for the module, or NULL if the module is not found. }
  { [onComplete] an optional callback that will be called once Wren is done with the result. }
(* Const before type ignored *)

    WrenLoadModuleResult = record
        source : ^char;
        onComplete : WrenLoadModuleCompleteFn;
        userData : pointer;
      end;
  { Loads and returns the source code for the module [name]. }
(* Const before type ignored *)

    WrenLoadModuleFn = function (vm:PWrenVM; name:Pchar):WrenLoadModuleResult;cdecl;
  { Returns a pointer to a foreign method on [className] in [module] with }
  { [signature]. }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)

    WrenBindForeignMethodFn = function (vm:PWrenVM; module:Pchar; className:Pchar; isStatic:Boolean; signature:Pchar):WrenForeignMethodFn;cdecl;
  { Displays a string of text to the user. }
(* Const before type ignored *)

    WrenWriteFn = procedure (vm:PWrenVM; text:Pchar);cdecl;
  { A syntax or resolution error detected at compile time. }
  { The error message for a runtime error. }
  { One entry of a runtime error's stack trace. }

    WrenErrorType =  Longint;
    Const
      WREN_ERROR_COMPILE = 0;
      WREN_ERROR_RUNTIME = 1;
      WREN_ERROR_STACK_TRACE = 2;

  { Reports an error to the user. }
  { }
  { An error detected during compile time is reported by calling this once with }
  { [type] `WREN_ERROR_COMPILE`, the resolved name of the [module] and [line] }
  { where the error occurs, and the compiler's error [message]. }
  { }
  { A runtime error is reported by calling this once with [type] }
  { `WREN_ERROR_RUNTIME`, no [module] or [line], and the runtime error's }
  { [message]. After that, a series of [type] `WREN_ERROR_STACK_TRACE` calls are }
  { made for each line in the stack trace. Each of those has the resolved }
  { [module] and [line] where the method or function is defined and [message] is }
  { the name of the method or function. }
(* Const before type ignored *)
(* Const before type ignored *)

  type

    WrenErrorFn = procedure (vm:PWrenVM; _type:WrenErrorType; module:Pchar; line:longint; message:Pchar);cdecl;
  { The callback invoked when the foreign object is created. }
  { }
  { This must be provided. Inside the body of this, it must call }
  { [wrenSetSlotNewForeign()] exactly once. }
  { The callback invoked when the garbage collector is about to collect a }
  { foreign object's memory. }
  { }
  { This may be `NULL` if the foreign class does not need to finalize. }

    WrenForeignClassMethods = record
        allocate : WrenForeignMethodFn;
        finalize : WrenFinalizerFn;
      end;
  { Returns a pair of pointers to the foreign methods used to allocate and }
  { finalize the data for instances of [className] in resolved [module]. }
(* Const before type ignored *)
(* Const before type ignored *)
